data/all_generated_tests/raw_wast_tests/call_indirect_TypeMismatchinControlFlowInstructions_4591.wast
;; 10. **Invalid Table Type Reference Handling**:    - Employ `call_indirect` with an invalid table type (not `funcref`), ensuring the table constraints are enforced.    - **Constraint**: The table referenced must be of type `funcref`.    - **Relation**: Checks if type references are consistently validated, ensuring type constraints in control flow are maintained.

(assert_invalid
  (module
    (type $sig (func))
    (table 0 externref)
    (func (result i32)
      (call_indirect (type $sig) (i32.const 0))
    )
  )
  "type mismatch"
)